Editor Assembly Def Fix

--- a/Editor/Seven.EasySplines.Editor.asmdef
+++ b/Editor/Seven.EasySplines.Editor.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:2501c672303cd9d46825d506e23d5b11"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
